--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,24 @@ body {
     justify-content: center;
 }
 
+.white-container-publicidad {
+    display: flex;
+    width: 65%;
+    padding: 30px;
+    margin: 0 auto;
+    box-sizing: border-box;
+
+    border: 1px solid #979797;
+    border-radius: 8px;
+    background-color: #fff;
+
+    justify-content: center;
+}
+
+.oculto {
+  display: none;
+}
+
 .green-container {
     display: flex;
     width: 65%;
