--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,21 @@ body {
     color: #fff;
 }
 
+.entrar-salir {
+  text-decoration: none;
+  color: #fff;
+  cursor: pointer;
+  -webkit-transition: all .6s ease-in-out;
+     -moz-transition: all .6s ease-in-out;
+       -o-transition: all .6s ease-in-out;
+          transition: all .6s ease-in-out;
+}
+
+.entrar-salir:hover {
+    margin-right: 10px;
+    color: #2cc197;
+}
+
 .links {
     position: relative;
 
@@ -93,7 +108,6 @@ body {
 
 .links:hover {
     margin-left: 10px;
-
     color: #2cc197;
 }
 
@@ -123,6 +137,10 @@ body {
     background-color: #fff;
 
     justify-content: center;
+}
+.logo-publicidad {
+    width: 100%;
+    height: 100%;
 }
 
 .oculto {
